# crew-ai

./: .env  1_email_agnet.ipynb  CustomCrew.py  CustomFlow.py  main.py  model.py  pyproject.toml  tools.py
